# vpsguard

./: .gitattributes  .gitignore  AGENTS.md  Cargo.toml  Cross.toml  DEVELOPMENT_CONSTITUTION.md  README.md  clippy.toml  deny.toml  mutants.toml  pyproject.toml
.cargo/: config.toml
.config/: nextest.toml
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml  release.yml
configs/: crawler-networks.json  vps-guard.example.toml  vps-guard.g7devops.direct.toml  vps-guard.g7devops.ingress.toml  vps-guard.g7devops.shadow.toml  vps-guard.gnuboard5.enforce.toml  vps-guard.gnuboard5.observe.toml  vps-guard.integration.toml  vps-guard.protocol-only.integration.toml  vps-guard.security.integration.toml  vps-guard.smoke.toml
configs/apache/: gnuboard5-bypass.conf  gnuboard5-crs-exclusions.conf  gnuboard5-guarded.conf  vpsguard-origin-ports.conf  vpsguard-origin.conf  waf-detection.conf  waf-off.conf  waf-tuned-enforce.conf
configs/certbot/: g7devops-deploy-hook
configs/nginx/: g7devops-bypass.conf  g7devops-edge.conf  g7devops-origin-only.conf
configs/systemd/: g7devops-edge-tls.conf
crates/guard-agent/: Cargo.toml
crates/guard-agent/src/: cgroup.rs  lib.rs  os.rs  services.rs
crates/guard-agent/src/os/: tests.rs
crates/guard-agent/tests/: os_collector.rs  php_fpm_collector.rs  systemd_cgroup_collector.rs
crates/guard-cli/: Cargo.toml
crates/guard-cli/src/: main.rs  provider.rs
crates/guard-cli/tests/: apache_ingress_cli.rs  ingress_cli.rs  uninstall_release_cli.rs
crates/guard-control/: Cargo.toml
crates/guard-control/src/: admin_socket.rs  api.rs  auth.rs  auth_store.rs  firewall.rs  lib.rs  main.rs  notification.rs  pam_auth.rs  pam_mfa.rs  privileged.rs  protection.rs  provider.rs  runtime.rs  storage.rs  telemetry.rs
crates/guard-control/src/api/: protection_api.rs  tests.rs
crates/guard-control/src/auth/: tests.rs
crates/guard-control/src/notification/: tests.rs
crates/guard-control/src/protection/: tests.rs
crates/guard-control/src/provider/: tests.rs
crates/guard-control/src/runtime/: tests.rs
crates/guard-control/src/telemetry/: tests.rs
crates/guard-control/tests/: version_cli.rs
crates/guard-core/: Cargo.toml
crates/guard-core/src/: admin.rs  config.rs  correlation.rs  crawler.rs  detection.rs  event.rs  lib.rs  policy.rs  state.rs
crates/guard-core/src/config/: tests.rs
crates/guard-core/src/detection/: tests.rs
crates/guard-core/src/policy/: tests.rs
crates/guard-core/src/state/: tests.rs
crates/guard-edge/: Cargo.toml
crates/guard-edge/src/: challenge.rs  context.rs  lib.rs  main.rs  policy.rs  policy_runtime.rs  proxy.rs  rate_limit.rs  response.rs  runtime.rs  security.rs  startup.rs  supervisor.rs  telemetry.rs  tls.rs
crates/guard-edge/src/policy/: tests.rs
crates/guard-edge/src/policy_runtime/: tests.rs
crates/guard-edge/src/proxy/: tests.rs
crates/guard-edge/src/rate_limit/: tests.rs
crates/guard-edge/src/response/: tests.rs
crates/guard-edge/src/runtime/: tests.rs
crates/guard-edge/src/security/: tests.rs
crates/guard-edge/src/startup/: tests.rs
crates/guard-edge/src/supervisor/: tests.rs
crates/guard-edge/src/telemetry/: tests.rs
crates/guard-edge/src/tls/: tests.rs
crates/guard-edge/tests/: version_cli.rs
crates/guard-profiles/: Cargo.toml
crates/guard-provider/: Cargo.toml
crates/guard-provider/src/: cloudflare.rs  lib.rs  tests.rs
crates/guard-system/: Cargo.toml
crates/guard-system/src/: atomic_store.rs  command.rs  deployment_state.rs  ingress_state.rs  lib.rs  nftables.rs  operation.rs  plan.rs  secret.rs  tls.rs  ufw.rs
crates/guard-system/src/atomic_store/: tests.rs
crates/guard-system/src/deployment_state/: host.rs  snapshot.rs  snapshot_files.rs  snapshot_format.rs  snapshot_readback.rs  tests.rs  uninstall.rs
crates/guard-system/src/deployment_state/uninstall/: tests.rs
crates/guard-system/src/ingress_state/: apache.rs  apply.rs  candidate.rs  files.rs  format.rs  host.rs  probe.rs  snapshot.rs  switch.rs  switch_contract.rs  switch_snapshot.rs  tests.rs
crates/guard-system/src/ingress_state/apache/: tests.rs
crates/guard-system/src/operation/: tests.rs
crates/guard-system/src/plan/: tests.rs
crates/guard-system/src/tls/: reload.rs  served.rs
crates/guard-system/src/tls/reload/: tests.rs
crates/guard-system/src/tls/served/: tests.rs
crates/xtask/: Cargo.toml
docs/: APP_SECURITY.md  HARNESS_ARCHITECTURE.md  LOGGING.md  OPERATIONS.md  SERVICE_OBSERVABILITY.md  THIRD_PARTY_NOTICES.md
docs/adr/: 0001-operations-console-spa.md  0002-edge-integrations-and-service-observability.md  0003-harness-language-boundary.md
packaging/: ownership-manifest.txt
reference/wolchuck-edge-proxy/crates/edge_proxy/: Cargo.toml
reference/wolchuck-edge-proxy/crates/edge_proxy/src/: app_policy.rs  context.rs  main.rs  proxy_flow.rs  rate_limit.rs  request_policy.rs  response.rs  runtime_config.rs  startup.rs
reference/wolchuck-edge-proxy/crates/edge_proxy/src/app_policy/: tests.rs
reference/wolchuck-edge-proxy/crates/edge_proxy/src/main/: tests.rs
reference/wolchuck-edge-proxy/crates/edge_proxy/src/rate_limit/: tests.rs
reference/wolchuck-edge-proxy/crates/edge_proxy/src/request_policy/: tests.rs
scripts/: build-release.sh  build-storage.sh  check.sh  commit-contract-gate.sh  coverage-gate.sh  cutover-g7devops-direct-remote.sh  cutover-g7devops-direct.sh  cutover-g7devops-remote.sh  cutover-g7devops.sh  deploy-g7devops.sh  deploy-gnuboard5-shadow.sh  deployment-state.sh  dev-check.sh  docs-gate.sh  g7devops-direct-state.sh  harness-language-gate.sh  ingress-transaction.sh  integration-gate.sh  load-regression-gate.sh  operation-lock.sh  ops-harness.sh  pr-contract-gate.sh  requirements-gate.sh  restore-g7devops-direct.sh  restore-g7devops.sh  state-common.sh  uninstall.sh  update-release.sh
tools/: __init__.py  coverage-baseline.toml  harness-shell-baseline.json  update_crawler_networks.py
web/: app.css  app.js  app.test.js  components.json  index.html  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
(+182 files in other folders)
