[workspace]
resolver = "3"
members = [
    "crates/guard-agent",
    "crates/guard-cli",
    "crates/guard-control",
    "crates/guard-core",
    "crates/guard-edge",
    "crates/guard-profiles",
    "crates/guard-provider",
    "crates/guard-system",
    "crates/xtask",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.96.0"
authors = ["VPSGuard Contributors"]
repository = "https://github.com/jiwonpapa/vpsguard"
publish = false

[workspace.dependencies]
arc-swap = "1.7"
argon2 = "0.5.3"
async-trait = "0.1"
axum = "0.8"
base64 = "0.22"
bytes = "1.10"
chacha20poly1305 = "0.10.1"
clap = { version = "4.5", features = ["derive"] }
hmac = "0.12"
ipnet = { version = "2.11", features = ["serde"] }
listenfd = "1.0.2"
mysql_async = { version = "0.37.0", default-features = false, features = ["minimal-rust"] }
pingora-core = { version = "=0.8.0", features = ["rustls"] }
pingora-error = "=0.8.0"
pingora-http = "=0.8.0"
pingora-proxy = { version = "=0.8.0", features = ["rustls"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
redis = { version = "0.32.7", default-features = false, features = ["tokio-comp"] }
secrecy = "0.10.3"
rustls = { version = "0.23", default-features = false, features = ["aws_lc_rs", "std", "tls12"] }
rustls-pemfile = "2.2"
rusqlite = { version = "0.32", features = ["bundled"] }
rustix = { version = "1.1.4", features = ["fs", "process"] }
signal-hook = "0.3.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "2.0"
time = { version = "0.3", features = ["formatting", "parsing", "serde"] }
tokio = { version = "1.48", features = ["io-util", "macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tokio-stream = { version = "0.1", features = ["sync"] }
toml = "0.9"
totp-rs = { version = "5.7.2", features = ["otpauth", "zeroize"] }
tower = "0.5"
uuid = { version = "1.18", features = ["v4", "serde"] }
zeroize = "1.9"
x509-parser = "0.16"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
url = "2.5"

[workspace.lints.rust]
missing_docs = "deny"
unsafe_code = "forbid"
unused_must_use = "deny"

[workspace.lints.clippy]
dbg_macro = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unwrap_used = "deny"

[profile.dev]
debug = 1
incremental = false

[profile.dev.package."*"]
debug = false

[profile.test]
debug = 1
incremental = false

[profile.test.package."*"]
debug = false

[profile.release]
codegen-units = 1
lto = "thin"
strip = "symbols"
