[package]
name = "guard-control"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[lib]
name = "guard_control"

[[bin]]
name = "vps-guard-control"
path = "src/main.rs"

[[bin]]
name = "vps-guard-privileged"
path = "src/bin/vps-guard-privileged.rs"

[dependencies]
argon2.workspace = true
axum.workspace = true
base64.workspace = true
chacha20poly1305.workspace = true
clap.workspace = true
guard-agent = { path = "../guard-agent", version = "0.1.0" }
guard-core = { path = "../guard-core", version = "0.1.0" }
guard-provider = { path = "../guard-provider", version = "0.1.0" }
guard-system = { path = "../guard-system", version = "0.1.0" }
hmac.workspace = true
reqwest.workspace = true
rusqlite.workspace = true
rustix.workspace = true
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
totp-rs.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
time.workspace = true
uuid.workspace = true
zeroize.workspace = true

[dev-dependencies]
tempfile = "3.20"
tower.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
listenfd.workspace = true
pam-client = { version = "0.5.0", default-features = false }
uzers = "0.12.2"

[lints]
workspace = true
