[package]
name = "guard-edge"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[lib]
name = "guard_edge"

[[bin]]
name = "vps-guard-edge"
path = "src/main.rs"

[dependencies]
guard-core = { path = "../guard-core", version = "0.1.0" }

[lints]
workspace = true
