[package]
name = "guard-edge"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[lib]
name = "guard_edge"

[[bin]]
name = "vps-guard-edge"
path = "src/main.rs"

[dependencies]
async-trait.workspace = true
bytes.workspace = true
guard-core = { path = "../guard-core", version = "0.1.0" }
ipnet.workspace = true
pingora-core.workspace = true
pingora-error.workspace = true
pingora-http.workspace = true
pingora-proxy.workspace = true
rustls.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
