[package]
name = "guard-edge"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[lib]
name = "guard_edge"

[[bin]]
name = "vps-guard-edge"
path = "src/main.rs"

[dependencies]
arc-swap.workspace = true
async-trait.workspace = true
base64.workspace = true
bytes.workspace = true
guard-core = { path = "../guard-core", version = "0.1.0" }
guard-profiles = { path = "../guard-profiles", version = "0.1.0" }
guard-system = { path = "../guard-system", version = "0.1.0" }
hmac.workspace = true
ipnet.workspace = true
pingora-core.workspace = true
pingora-error.workspace = true
pingora-http.workspace = true
pingora-proxy.workspace = true
rustls.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
time.workspace = true

[dev-dependencies]
rcgen = "0.13"
tempfile = "3.20"

[lints]
workspace = true
