[package]
name = "guard-system"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
guard-core = { path = "../guard-core", version = "0.1.0" }
ipnet.workspace = true
rustls.workspace = true
rustls-pemfile.workspace = true
rustix.workspace = true
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
time.workspace = true
x509-parser.workspace = true

[dev-dependencies]
rcgen = "0.13"
tempfile = "3.20"

[lints]
workspace = true
